testsuite/tests/overloadedrecflds/should_fail/hasfieldfail02.stderr

hasfieldfail02.hs:11:5: error: [GHC-39999]
    • No instance for ‘HasField "foo" T a1’
        arising from a use of ‘getField’
    • In the expression: getField @"foo" (MkT id)
      In an equation for ‘x’: x = getField @"foo" (MkT id)

hasfieldfail02.hs:17:5: error: [GHC-39999]
    • No instance for ‘HasField "bar" U a0’
        arising from a use of ‘getField’
    • In the expression: getField @"bar" (MkU True)
      In an equation for ‘y’: y = getField @"bar" (MkU True)
